--- a/styles-home/main.css
+++ b/styles-home/main.css
@@ -1,25 +1,45 @@
+html, body {
+  height: 100%;
+}
 body {
   user-select: none;
   -moz-user-select: none;
   overflow: hidden;
   background-color: #fc3e32;
   font-family: 'Open Sans Condensed', sans-serif;
-  padding-top: 12%;
+  margin: 0;
 }
 img{
 	pointer-events: none;
 }
 #content {
-    text-align: center;
-    max-width: 240px;
-    max-height: 200px;
-    margin: 0 auto;
+  pointer-events: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    height: 100%;
+    z-index: 1;
+    padding: 0;
+    margin: 0;
+}
+.row{
+  border: none;
 }
 #round {
+    pointer-events: all;
+    width: 250px;
+    height: 250px;
     cursor: pointer;
     border-radius: 50%;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    margin: 0;
+
+    z-index: 10;
 }
 #name {
+  text-align: center;
   font-size: 32px;
   color: white;
 }
@@ -47,7 +67,7 @@ nav a:hover {
   font-size: 23px !important;
 }
 
-#particles-js{
+#particles-js, .c{
   position: absolute;
   top: 0;
   left: 0;
@@ -60,6 +80,24 @@ nav a:hover {
   animation-duration: 1s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
+}
+
+.bounce {
+  animation-name: bounce;
+  animation-timing-function: ease;
+}
+.speed-boost-1 {
+  animation-duration: 500ms !important;
+  animation-direction: alternate !important;
+}
+.speed-boost-2 {
+  animation-duration: 250ms !important;
+
+}
+@keyframes bounce {
+  from   { transform: translateY(0); }
+  50%  { transform: translateY(-20px); }
+  to { transform: translateY(0); }
 }
 
 
@@ -163,4 +201,16 @@ nav a:hover {
   backface-visibility: visible !important;
   -webkit-animation-name: flipInX;
   animation-name: flipInX;
+}
+
+
+.c { 
+  pointer-events: none;
+  width: 100%; 
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
